--- a/NetCafeWeb/Views/Order/Create.cshtml
+++ b/NetCafeWeb/Views/Order/Create.cshtml
@@ -79,7 +79,7 @@
                     //var mm = 'Riot Quang Trung';
                     var net = document.getElementById("netcafeselect");
                     for (var i = 0; i < net.options.length; i++) {
-                        if (net.options[i].text === mm) {
+                        if (net.options[i].text === data) {
                             net.selectedIndex = i;
                             break;
                         }
